# ComfyUI-compare-videos

./: .gitignore  LICENSE  README.md  __init__.py  compare_video.py  pyproject.toml
web/: compare_video.js
